# Primatif_Toad

./: .geminiignore  .gitignore  .gitmodules  .markdownlint-cli2.jsonc  .markdownlint.json  .markdownlintignore  .toad-root  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Justfile  README.md  USER_GUIDE.md  deny.toml  dprint.json  package-lock.json  package.json  toad-blueprint.md  toad-cli.md
.gemini/: GEMINI.md  SESSIONS.md  settings.json  toad-blueprint.md  toad-cli.md
.gemini/skills/: toad-blueprint.md  toad-cli.md  toad-mcp.md
.github/workflows/: ci.yml  release.yml
.windsurf/rules/: toad-blueprint.md  toad-cli.md
.windsurf/workflows/: code-review.md
conductor/: USER_GUIDE.md  index.md  product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
conductor/code_styleguides/: rust.md
crates/discovery/: Cargo.toml  LICENSE
crates/discovery/src/: lib.rs  strategies.rs  tests.rs
crates/scaffold/: Cargo.toml
crates/toad-core/: Cargo.toml  LICENSE  README.md
crates/toad-git/: Cargo.toml  LICENSE
crates/toad-manifest/: Cargo.toml  LICENSE
crates/toad-ops/: Cargo.toml  LICENSE
crates/toad-ops/src/: audit.rs  clean.rs  lib.rs  safety.rs  shell.rs  stats.rs  tests.rs
docs/: CLI.md  CONVENTIONS.md  PLUGINS.md  backlog.md  v1.1.0_context_evolution.md
docs/architecture/: rust-architecture.md
docs/guides/: CLI.md  MCP.md  PLUGINS.md
docs/research/: market_landscape.md
docs/work_orders/: 001_setup_devops_overlay.md  002_rust_setup.md  003_configure_settings.md  005_platform_mvp.md  006_toad_reveal.md  007_context_shadows.md  008_architectural_refinement.md
scripts/: check_license_boundary.sh  dev_setup.sh  history_cleanup.sh  install_toad.sh  mksandbox.sh  sync_dependencies.sh  sync_version.sh
scripts/git-hooks/: post-commit  pre-commit  pre-push
scripts/sandbox/: README.md  mksandbox.sh  run_ephemeral.sh
scripts/tests/: integration_qa.sh  mcp_schemas.json  mcp_validation.sh
scripts/workflows/: qa.sh  release-check.sh  release.sh  (+1 more)
(+245 files in other folders)
