[workspace]
members = [
  "bin/toad", "bin/toad-mcp",
  "crates/toad-core",
  "crates/toad-discovery",
  "crates/toad-git",
  "crates/toad-manifest",
  "crates/toad-ops",
  "crates/toad-scaffold",
]
resolver = "2"

[workspace.package]
authors = ["Primatif"]
homepage = "https://github.com/Primatif/Primatif_Toad"
repository = "https://github.com/Primatif/Primatif_Toad"
