[package]
name = "discovery"
version = "0.5.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
ignore = "0.4.25"
rayon = "1.10"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toad-core = { version = "0.5.0", path = "../toad-core" }
toad-git = { path = "../toad-git" }

[dev-dependencies]
filetime = "0.2"
tempfile = "3.24.0"
