[package]
name = "toad-ops"
version = "1.0.1"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toad-core = { version = "1.0.1", path = "../toad-core" }
wait-timeout = "0.2"
walkdir = "2.5"
whoami = "2.1"

[dev-dependencies]
tempfile = "3.10"
